--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -2,6 +2,6 @@ h3{
     text-align: center;
     font-weight: bold;
     color: red;
-    font-size: large;
+    font-size: xx-large;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
