--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -4,11 +4,12 @@
         <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 news-card">
             <img src="{{ news.image }}" alt="{{ news.title }} image" class="img-responsive">
             <li class="text-center">
-                <a href="/news/{{news.id}}">
-                    {{ news.title|truncate(10)}}</a>
+                <a href="{{news.article}}" target="_blank">
+                    {{ news.title}}</a>
             </li>
         </div>
 
     {% endfor %}
 
 {% endmacro %}
+
