--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,12 +7,30 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"> News </a>
+            <a class="navbar-brand" href="/"> Article </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
         </div>
+
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">              
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('main.technology')}}">Technology</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('main.entertainment')}}">Entertainment</a>
+                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('main.business')}}">Business</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('main.sports')}}">Sports</a>
+                </li>               
+            </ul>               
+        </div>        
 
     </div>
 </div>
